# poetry-template

./: README.md  pyproject.toml
poetry_template/: main.py
tests/: test_poetry_template.py
