[tool.poetry]
name = "poetry-template"
version = "0.1.0"
description = "Template for Python Poetry projects"
authors = ["Cody Logan <clpo13@gmail.com>"]
readme = "README.md"
repository = "https://github.com/clpo13/poetry-template"
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
isort = "^5.5.3"
pytest = "^5.4"

[tool.poetry.scripts]
hello = "poetry_template.main:hello"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/clpo13/poetry-template/issues"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
